# gsuid-utils

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codecov.yml
gsuid_utils/: __init__.py  types.py
gsuid_utils/akashadata/: models.py
gsuid_utils/api/akashadata/: __init__.py  request.py
gsuid_utils/api/ambr/: __init__.py  models.py  request.py  utils
gsuid_utils/api/enka/: models.py  request.py
gsuid_utils/api/hhw/: __init__.py  request.py
gsuid_utils/api/mhy/: models.py
gsuid_utils/api/mihoyo/: __init__.py  models.py
gsuid_utils/api/minigg/: __init__.py  exception.py  models.py  request.py
gsuid_utils/api/mys/: __init__.py  api.py  models.py  request.py
gsuid_utils/database/: config.py  dal.py  models.py
gsuid_utils/enka/: __init__.py  request.py
gsuid_utils/image/: ColorText.py  color.py
gsuid_utils/minigg/: __init__.py  models.py  request.py
tests/: conftest.py  enka_data.json  test_enka.py  test_minigg.py
