[tool.poetry]
name = "gsuid-utils"
version = "0.1.0"
description = "KimigaiiWuyi/GenshinUID 的核心辅助工具（core 的 core），理论上可供其他原神服务使用。"
authors = ["KimigaiiWuyi <444835641@qq.com>", "MingxuanGame <MingxuanGame@outlook.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/Genshin-bots/gsuid-utils"
repository = "https://github.com/Genshin-bots/gsuid-utils"
readme = "README.md"
packages = [{include = "gsuid_utils"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Genshin-bots/gsuid-utils/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
httpx = "^0.23.2"
typing-extensions = { version = "^4.4.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pycln = "^2.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
coverage = {extras = ["toml"], version = "^7.0.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=gsuid_utils --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = ["def __repr__", "def __str__", "from typing_extensions import", "pragma: no cover"]
