[tool.poetry]
authors = ["KimigaiiWuyi <444835641@qq.com>", "MingxuanGame <MingxuanGame@outlook.com>"]
description = "KimigaiiWuyi/GenshinUID 的核心辅助工具（core 的 core），理论上可供其他原神服务使用。"
homepage = "https://github.com/Genshin-bots/gsuid-utils"
license = "GPL-3.0-or-later"
name = "gsuid-utils"
packages = [{include = "gsuid_utils"}]
readme = "README.md"
repository = "https://github.com/Genshin-bots/gsuid-utils"
version = "0.1.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Genshin-bots/gsuid-utils/issues"

[tool.poetry.dependencies]
httpx = "^0.23.2"
python = "^3.8.1"
typing-extensions = {version = "^4.4.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
isort = "^5.11.5"
pre-commit = "^2.21.0"
pycln = "^2.1.2"
tomli = "^2.0.1"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "^7.0.3"}
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
extend-exclude = '''
'''
include = '\.pyi?$'
line-length = 79
skip-string-normalization = true
target-version = ["py38", "py39", "py310"]

[tool.isort]
extra_standard_library = ["typing_extensions"]
force_sort_within_sections = true
length_sort = true
line_length = 79
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
addopts = "--cov=gsuid_utils --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["def __repr__", "def __str__", "from typing_extensions import", "pragma: no cover"]

[tool.flake8]
# docstring-convention = "google"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
]
ignore = ["E231", "E241"]
per-file-ignores = [
  "__init__.py:F401",
]
